--- a/otsdaq-utilities/CMakeLists.txt
+++ b/otsdaq-utilities/CMakeLists.txt
@@ -3,4 +3,5 @@
 add_subdirectory(Chat)
 add_subdirectory(ConfigurationGUI)
 add_subdirectory(Logbook)
+add_subdirectory(OtsConfigurationWizard)
 add_subdirectory(Visualization)
