OtsConfigurationWizardSupervisor files added

--- a/otsdaq-utilities/OtsConfigurationWizard/CMakeLists.txt
+++ b/otsdaq-utilities/OtsConfigurationWizard/CMakeLists.txt
@@ -1,5 +1,16 @@
 cet_make(LIBRARY_NAME OtsConfigurationWizard
 		 LIBRARIES
 		 ${XDAQ_BASIC_LIB_LIST}
+		 ConfigurationInterface
+		 ConfigurationDataFormats
+		 SupervisorConfigurations
+		 CgiDataUtilities
+		 WebUsersUtilities
 		 SOAPUtilities
+		 XmlUtilities
 )
+
+install_headers()
+install_source()
+
+
