--- a/otsdaq-utilities/Chat/CMakeLists.txt
+++ b/otsdaq-utilities/Chat/CMakeLists.txt
@@ -6,6 +6,7 @@ cet_make(LIBRARY_NAME Chat
 		 XmlUtilities
 		 WebUsersUtilities
          SOAPUtilities
+         $ENV{XERCES_C_LIB}/libxerces-c.so
 )
 
 install_headers()
