--- a/otsdaq-utilities/ConfigurationGUI/CMakeLists.txt
+++ b/otsdaq-utilities/ConfigurationGUI/CMakeLists.txt
@@ -8,6 +8,7 @@ cet_make(LIBRARY_NAME ConfigurationGUI
 		 WebUsersUtilities
 		 SOAPUtilities
 		 XmlUtilities
+         $ENV{XERCES_C_LIB}/libxerces-c.so
 )
 
 install_headers()
