Enable packaging system.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -82,3 +82,6 @@ add_subdirectory(ups)
 # WebGUI
 FILE(COPY WebGUI DESTINATION .)
 INSTALL(DIRECTORY WebGUI DESTINATION ${product}/${version})
+
+# packaging utility
+include(UseCPack)
