--- a/otsdaq-utilities/CMakeLists.txt
+++ b/otsdaq-utilities/CMakeLists.txt
@@ -5,3 +5,4 @@ add_subdirectory(ConfigurationGUI)
 add_subdirectory(Logbook)
 add_subdirectory(OtsConfigurationWizard)
 add_subdirectory(Visualization)
+add_subdirectory(MacroMaker)
