--- a/otsdaq-utilities/MacroMaker/CMakeLists.txt
+++ b/otsdaq-utilities/MacroMaker/CMakeLists.txt
@@ -2,6 +2,7 @@ include_directories($ENV{XERCES_C_INC})
 cet_make(LIBRARY_NAME MacroMaker
 		 LIBRARIES
 		 ${XDAQ_BASIC_LIB_LIST}
+		 ConfigurationInterface
 		 SupervisorConfigurations
 		 XmlUtilities
 		 SOAPUtilities
