Integration of MessageFacility

--- a/otsdaq-utilities/OtsConfigurationWizard/CMakeLists.txt
+++ b/otsdaq-utilities/OtsConfigurationWizard/CMakeLists.txt
@@ -10,6 +10,8 @@ cet_make(LIBRARY_NAME OtsConfigurationWizard
 		 SOAPUtilities
 		 XmlUtilities
          $ENV{XERCES_C_LIB}/libxerces-c.so
+         MessageFacility
+         ${MF_UTILITIES}
 )
 
 install_headers()
