--- a/otsdaq-utilities/Visualization/CMakeLists.txt
+++ b/otsdaq-utilities/Visualization/CMakeLists.txt
@@ -15,6 +15,7 @@ cet_make(LIBRARY_NAME Visualization
 		 ConfigurationInterface
 		 XmlUtilities
 		 SOAPUtilities
+		 MessageFacility
          $ENV{XERCES_C_LIB}/libxerces-c.so
          
 )
