--- a/otsdaq-utilities/Chat/CMakeLists.txt
+++ b/otsdaq-utilities/Chat/CMakeLists.txt
@@ -7,6 +7,7 @@ cet_make(LIBRARY_NAME Chat
 		 XmlUtilities
 		 WebUsersUtilities
          SOAPUtilities
+	 MessageFacility
          $ENV{XERCES_C_LIB}/libxerces-c.so
 )
 
