--- a/otsdaq-utilities/MacroMaker/CMakeLists.txt
+++ b/otsdaq-utilities/MacroMaker/CMakeLists.txt
@@ -9,6 +9,7 @@ cet_make(LIBRARY_NAME MacroMaker
 		 CgiDataUtilities
 		 WebUsersUtilities
          $ENV{XERCES_C_LIB}/libxerces-c.so
+	 MessageFacility
 )
 
 install_headers()
