--- a/otsdaq-utilities/ConfigurationGUI/CMakeLists.txt
+++ b/otsdaq-utilities/ConfigurationGUI/CMakeLists.txt
@@ -4,12 +4,16 @@ cet_make(LIBRARY_NAME ConfigurationGUI
 		 ${XDAQ_BASIC_LIB_LIST}
 		 ConfigurationInterface
 		 ConfigurationDataFormats
+		 otsdaq-core_ConfigurationPluginDataFormats_ConfigurationAliases_configuration
+		 otsdaq-core_ConfigurationPluginDataFormats_Configurations_configuration
 		 SupervisorConfigurations
 		 CgiDataUtilities
 		 WebUsersUtilities
 		 SOAPUtilities
 		 XmlUtilities
+		 MessageFacility
          $ENV{XERCES_C_LIB}/libxerces-c.so
+	 ${MF_MESSAGELOGGER}
 )
 
 install_headers()
