--- a/otsdaq-utilities/OtsConfigurationWizard/CMakeLists.txt
+++ b/otsdaq-utilities/OtsConfigurationWizard/CMakeLists.txt
@@ -11,7 +11,8 @@ cet_make(LIBRARY_NAME OtsConfigurationWizard
 		 XmlUtilities
          $ENV{XERCES_C_LIB}/libxerces-c.so
          MessageFacility
-         ${MF_UTILITIES}
+	 ${MF_MESSAGELOGGER}
+	 ${MF_UTILITIES}
 )
 
 install_headers()
