Addition of console window and minor cleanup to logbook

--- a/otsdaq-utilities/CMakeLists.txt
+++ b/otsdaq-utilities/CMakeLists.txt
@@ -6,3 +6,4 @@ add_subdirectory(Logbook)
 add_subdirectory(OtsConfigurationWizard)
 add_subdirectory(Visualization)
 add_subdirectory(MacroMaker)
+add_subdirectory(Console)
