--- a/otsdaq-utilities/Logbook/CMakeLists.txt
+++ b/otsdaq-utilities/Logbook/CMakeLists.txt
@@ -1,4 +1,5 @@
 include_directories($ENV{XERCES_C_INC})
+
 cet_make(LIBRARY_NAME Logbook
 		 LIBRARIES
 		 ${XDAQ_BASIC_LIB_LIST}
@@ -8,6 +9,7 @@ cet_make(LIBRARY_NAME Logbook
 		 CgiDataUtilities
 		 WebUsersUtilities
 		 MessageFacility
+		 NetworkUtilities
          $ENV{XERCES_C_LIB}/libxerces-c.so
 )
 
