--- a/otsdaq-utilities/CMakeLists.txt
+++ b/otsdaq-utilities/CMakeLists.txt
@@ -1,7 +1,7 @@
 # Extra parts for the XDAQ GUI
 add_subdirectory(Chat)
 add_subdirectory(ConfigurationGUI)
-#add_subdirectory(SlowControlsDashboard)
+add_subdirectory(SlowControlsDashboard)
 add_subdirectory(Logbook)
 add_subdirectory(OtsConfigurationWizard)
 add_subdirectory(Visualization)
