--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,8 +54,8 @@ find_ups_boost( v1_50_0 filesystem
                         unit_test_framework
  )
 
-#find_library( EPICS_CA NAMES ca PATHS $ENV{EPICS_LIBRARY} )
-#find_library( EPICS_COM NAMES Com PATHS $ENV{EPICS_LIBRARY} )
+find_library( EPICS_CA NAMES ca PATHS $ENV{EPICS_LIBRARY} )
+find_library( EPICS_COM NAMES Com PATHS $ENV{EPICS_LIBRARY} )
 
 # Include at the top level to make sure include directory is visible
 # everywhere.
