--- a/otsdaq-utilities/ConfigurationGUI/CMakeLists.txt
+++ b/otsdaq-utilities/ConfigurationGUI/CMakeLists.txt
@@ -4,8 +4,8 @@ cet_make(LIBRARY_NAME ConfigurationGUI
 		 ${XDAQ_BASIC_LIB_LIST}
 		 ConfigurationInterface
 		 ConfigurationDataFormats
-		 otsdaq-core_ConfigurationPluginDataFormats_ConfigurationAliases_configuration
-		 otsdaq-core_ConfigurationPluginDataFormats_Configurations_configuration
+		 #otsdaq-core_ConfigurationPluginDataFormats_ConfigurationAliases_configuration
+		 #otsdaq-core_ConfigurationPluginDataFormats_Configurations_configuration
 		 SupervisorConfigurations
 		 CgiDataUtilities
 		 WebUsersUtilities
