Changed the way I am looking for the unique supervisor

--- a/otsdaq-utilities/Visualization/CMakeLists.txt
+++ b/otsdaq-utilities/Visualization/CMakeLists.txt
@@ -16,6 +16,7 @@ cet_make(LIBRARY_NAME Visualization
 		 ConfigurationInterface
 		 otsdaq-core_ConfigurationPluginDataFormats_DataManagerConfiguration_configuration
 		 otsdaq-core_ConfigurationPluginDataFormats_DataBufferConfiguration_configuration
+		 otsdaq-core_ConfigurationPluginDataFormats_XDAQContextConfiguration_configuration
 		 XmlUtilities
 		 SOAPUtilities
 		 MessageFacility
