--- a/otsdaq-utilities/Visualization/CMakeLists.txt
+++ b/otsdaq-utilities/Visualization/CMakeLists.txt
@@ -14,6 +14,7 @@ cet_make(LIBRARY_NAME Visualization
 		 MonicelliInterface
 		 SupervisorDescriptorInfo
 		 ConfigurationInterface
+		 ConfigurationDataFormats
 		 otsdaq-core_ConfigurationPluginDataFormats_DataManagerConfiguration_configuration
 		 otsdaq-core_ConfigurationPluginDataFormats_DataBufferConfiguration_configuration
 		 otsdaq-core_ConfigurationPluginDataFormats_XDAQContextConfiguration_configuration
