--- a/otsdaq-utilities/CMakeLists.txt
+++ b/otsdaq-utilities/CMakeLists.txt
@@ -11,4 +11,4 @@ add_subdirectory(OtsConfigurationWizard)
 add_subdirectory(Visualization)
 add_subdirectory(MacroMaker)
 add_subdirectory(Console)
-add_subdirectory(SlowControlsDashboard)
+add_subdirectory(ControlsDashboard)
