--- a/otsdaq-utilities/ConfigurationGUI/CMakeLists.txt
+++ b/otsdaq-utilities/ConfigurationGUI/CMakeLists.txt
@@ -2,6 +2,7 @@ include_directories($ENV{XERCES_C_INC})
 cet_make(LIBRARY_NAME ConfigurationGUI
 		 LIBRARIES
 		 ${XDAQ_BASIC_LIB_LIST}
+		 ${CETLIB_EXCEPT}
 		 ConfigurationInterface
 		 ConfigurationDataFormats
 		 #otsdaq-core_ConfigurationPluginDataFormats_ConfigurationAliases_configuration
