checking in CMakeLists changes for otsdaq package.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -78,5 +78,9 @@ add_subdirectory(ups)
 FILE(COPY WebGUI DESTINATION .)
 INSTALL(DIRECTORY WebGUI DESTINATION ${product}/${version})
 
+# tools
+FILE(COPY tools DESTINATION .)
+INSTALL(DIRECTORY tools DESTINATION ${product}/${version})
+
 # packaging utility
 include(UseCPack)
