now tracking last Configured and Started configuration group and displaying in System View.

--- a/otsdaq-utilities/OtsConfigurationWizard/CMakeLists.txt
+++ b/otsdaq-utilities/OtsConfigurationWizard/CMakeLists.txt
@@ -5,6 +5,7 @@ cet_make(LIBRARY_NAME OtsConfigurationWizard
 		 ConfigurationInterface
 		 ConfigurationDataFormats
 		 SupervisorDescriptorInfo
+		 Supervisor
 		 CgiDataUtilities
 		 WebUsersUtilities
 		 SOAPUtilities
