--- a/otsdaq-utilities/ConfigurationGUI/CMakeLists.txt
+++ b/otsdaq-utilities/ConfigurationGUI/CMakeLists.txt
@@ -7,6 +7,7 @@ cet_make(LIBRARY_NAME ConfigurationGUI
 		 ConfigurationDataFormats
 		 #otsdaq-core_ConfigurationPluginDataFormats_ConfigurationAliases_configuration
 		 #otsdaq-core_ConfigurationPluginDataFormats_Configurations_configuration
+		 otsdaq-core_ConfigurationPluginDataFormats_IterateConfiguration_configuration
 		 SupervisorDescriptorInfo
 		 CgiDataUtilities
 		 WebUsersUtilities
