--- a/otsdaq-utilities/CMakeLists.txt
+++ b/otsdaq-utilities/CMakeLists.txt
@@ -8,7 +8,7 @@ add_subdirectory(Chat)
 add_subdirectory(ConfigurationGUI)
 add_subdirectory(ECLWriter)
 add_subdirectory(Logbook)
-add_subdirectory(OtsConfigurationWizard)
+#add_subdirectory(OtsConfigurationWizard)
 add_subdirectory(Visualization)
 add_subdirectory(MacroMaker)
 add_subdirectory(Console)
