--- a/otsdaq-utilities/Chat/CMakeLists.txt
+++ b/otsdaq-utilities/Chat/CMakeLists.txt
@@ -2,7 +2,7 @@ include_directories($ENV{XERCES_C_INC})
 cet_make(LIBRARY_NAME Chat
 		 LIBRARIES
 		 ${XDAQ_BASIC_LIB_LIST}
-		 SupervisorDescriptorInfo
+		 SupervisorInfo
 		 CgiDataUtilities
 		 XmlUtilities
 		 WebUsersUtilities
