Define XDAQ_NOCONST for SLF6

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,6 +59,12 @@ find_library( EPICS_COM NAMES Com PATHS $ENV{EPICS_LIBRARY} )
 
 find_package(MPI QUIET)
 
+check_ups_version(xdaq "$ENV{XDAQ_VERSION}" v14_0_0 PRODUCT_OLDER_VAR slf6_xdaq)
+if(slf6_xdaq)
+	message("Building on SLF6, defining NOCONST")
+  add_definitions(-DXDAQ_NOCONST)
+endif()
+
 # macros for art_dictionary and simple_plugin
 include(ArtDictionary)
 include(ArtMake)
