re-interpretation of CoreSupervisorBase as the base class for all otsdaq supervisors (rather than the base class for the FESupervisor only, which was not the original intent) - fixing bugs

--- a/otsdaq-utilities/ConfigurationGUI/CMakeLists.txt
+++ b/otsdaq-utilities/ConfigurationGUI/CMakeLists.txt
@@ -6,12 +6,13 @@ cet_make(LIBRARY_NAME ConfigurationGUI
 		 ConfigurationInterface
 		 ConfigurationDataFormats
 		 otsdaq-core_ConfigurationPluginDataFormats_IterateConfiguration_configuration
-		 SupervisorInfo
-		 CgiDataUtilities
-		 WebUsersUtilities
-		 SOAPUtilities
-		 XmlUtilities
-		 MessageFacility
+		 CoreSupervisors
+		 #SupervisorInfo
+		 #CgiDataUtilities
+		 #WebUsersUtilities
+		 #SOAPUtilities
+		 #XmlUtilities
+		 #MessageFacility
 		 cetlib
          $ENV{XERCES_C_LIB}/libxerces-c.so
 	 ${MF_MESSAGELOGGER}
