Use new xdaq UPS product. Make fixes where necessary for gcc 6 compatibility

--- a/otsdaq-utilities/Console/CMakeLists.txt
+++ b/otsdaq-utilities/Console/CMakeLists.txt
@@ -13,7 +13,7 @@ cet_make(LIBRARY_NAME Console
 		 SOAPUtilities
 		 CgiDataUtilities
 		 WebUsersUtilities
-		 MessageFacility
+#		 MessageFacility
 		 NetworkUtilities
          $ENV{XERCES_C_LIB}/libxerces-c.so
 )
