--- a/otsdaq-utilities/Logbook/CMakeLists.txt
+++ b/otsdaq-utilities/Logbook/CMakeLists.txt
@@ -8,7 +8,7 @@ cet_make(LIBRARY_NAME Logbook
 		 SOAPUtilities
 		 CgiDataUtilities
 		 WebUsersUtilities
-		 MessageFacility
+		 #MessageFacility
 		 NetworkUtilities
          $ENV{XERCES_C_LIB}/libxerces-c.so
 )
