Changes needed to compile under e15 with artdaq v3_01_00

--- a/otsdaq-utilities/Chat/CMakeLists.txt
+++ b/otsdaq-utilities/Chat/CMakeLists.txt
@@ -2,6 +2,7 @@ include_directories($ENV{XERCES_C_INC})
 cet_make(LIBRARY_NAME Chat
 		 LIBRARIES
 		 ${XDAQ_BASIC_LIB_LIST}
+		 CoreSupervisors
 		 SupervisorInfo
 		 CgiDataUtilities
 		 XmlUtilities
