--- a/otsdaq-utilities/Console/CMakeLists.txt
+++ b/otsdaq-utilities/Console/CMakeLists.txt
@@ -9,6 +9,7 @@ cet_make(LIBRARY_NAME Console
 		 SupervisorInfo
 		${MF_MESSAGELOGGER}
 		${MF_UTILITIES}
+		CoreSupervisors
 		 XmlUtilities
 		 SOAPUtilities
 		 CgiDataUtilities
