Add more required libraries to link lists

--- a/otsdaq-utilities/ConfigurationGUI/CMakeLists.txt
+++ b/otsdaq-utilities/ConfigurationGUI/CMakeLists.txt
@@ -1,17 +1,19 @@
 include_directories($ENV{XERCES_C_INC})
 cet_make(LIBRARY_NAME ConfigurationGUI
 		 LIBRARIES
+		 artdaq-core_Utilities
 		 ${XDAQ_BASIC_LIB_LIST}
 		 ${CETLIB_EXCEPT}
 		 ConfigurationInterface
 		 ConfigurationDataFormats
 		 otsdaq-core_ConfigurationPluginDataFormats_IterateConfiguration_configuration
+		 FiniteStateMachine
 		 CoreSupervisors
-		 #SupervisorInfo
-		 #CgiDataUtilities
-		 #WebUsersUtilities
+		 SupervisorInfo
+		 CgiDataUtilities
+		 WebUsersUtilities
 		 #SOAPUtilities
-		 #XmlUtilities
+		 XmlUtilities
 		 #MessageFacility
 		 cetlib
          $ENV{XERCES_C_LIB}/libxerces-c.so
