--- a/otsdaq-utilities/Chat/CMakeLists.txt
+++ b/otsdaq-utilities/Chat/CMakeLists.txt
@@ -1,7 +1,9 @@
 include_directories($ENV{XERCES_C_INC})
 cet_make(LIBRARY_NAME Chat
 		 LIBRARIES
+         artdaq-core_Utilities
 		 ${XDAQ_BASIC_LIB_LIST}
+		 FiniteStateMachine
 		 CoreSupervisors
 		 SupervisorInfo
 		 CgiDataUtilities
