--- a/otsdaq-utilities/Logbook/CMakeLists.txt
+++ b/otsdaq-utilities/Logbook/CMakeLists.txt
@@ -2,6 +2,7 @@ include_directories($ENV{XERCES_C_INC})
 
 cet_make(LIBRARY_NAME Logbook
 		 LIBRARIES
+		 artdaq-core_Utilities
 		 ${XDAQ_BASIC_LIB_LIST}
 		 SupervisorInfo
 		 XmlUtilities
