--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,7 +57,7 @@ find_ups_boost( v1_50_0 filesystem
 find_library( EPICS_CA NAMES ca PATHS $ENV{EPICS_LIBRARY} )
 find_library( EPICS_COM NAMES Com PATHS $ENV{EPICS_LIBRARY} )
 
-find_package(MPI QUIET)
+##find_package(MPI QUIET)
 
 check_ups_version(xdaq "$ENV{XDAQ_VERSION}" v14_0_0 PRODUCT_OLDER_VAR slf6_xdaq)
 if(slf6_xdaq)
