--- a/otsdaq-utilities/Logbook/CMakeLists.txt
+++ b/otsdaq-utilities/Logbook/CMakeLists.txt
@@ -3,13 +3,7 @@ include_directories($ENV{XERCES_C_INC})
 cet_make(LIBRARY_NAME Logbook
 		 LIBRARIES
 		 ${XDAQ_BASIC_LIB_LIST}
-		 SupervisorInfo
-		 XmlUtilities
-		 SOAPUtilities
-		 CgiDataUtilities
-		 WebUsersUtilities
-		 MessageFacility
-		 NetworkUtilities
+		 CoreSupervisors
          $ENV{XERCES_C_LIB}/libxerces-c.so
 )
 
