--- a/otsdaq-utilities/MacroMaker/CMakeLists.txt
+++ b/otsdaq-utilities/MacroMaker/CMakeLists.txt
@@ -3,14 +3,8 @@ cet_make(LIBRARY_NAME MacroMaker
 		 LIBRARIES
 		 artdaq-core_Utilities
 		 ${XDAQ_BASIC_LIB_LIST}
-		 ConfigurationInterface
-		 SupervisorInfo
-		 XmlUtilities
-		 SOAPUtilities
-		 CgiDataUtilities
-		 WebUsersUtilities
+		 CoreSupervisors
          $ENV{XERCES_C_LIB}/libxerces-c.so
-#	 MessageFacility
 )
 
 install_headers()
