Remove e10 builds. Add needed libraries where needed

--- a/otsdaq-utilities/ConfigurationGUI/CMakeLists.txt
+++ b/otsdaq-utilities/ConfigurationGUI/CMakeLists.txt
@@ -14,6 +14,7 @@ cet_make(LIBRARY_NAME ConfigurationGUI
 		 WebUsersUtilities
 		 #SOAPUtilities
 		 XmlUtilities
+         Macros
 		 #MessageFacility
 		 cetlib
          $ENV{XERCES_C_LIB}/libxerces-c.so
