--- a/otsdaq-utilities/Logbook/CMakeLists.txt
+++ b/otsdaq-utilities/Logbook/CMakeLists.txt
@@ -5,6 +5,12 @@ cet_make(LIBRARY_NAME Logbook
 		 artdaq-core_Utilities
 		 ${XDAQ_BASIC_LIB_LIST}
 		 CoreSupervisors
+		 CgiDataUtilities
+		 XmlUtilities
+		 SOAPUtilities
+		 SupervisorInfo
+		 WebUsersUtilities
+		 FiniteStateMachine
          $ENV{XERCES_C_LIB}/libxerces-c.so
 )
 
