--- a/otsdaq-utilities/Visualization/CMakeLists.txt
+++ b/otsdaq-utilities/Visualization/CMakeLists.txt
@@ -16,6 +16,7 @@ cet_make(LIBRARY_NAME Visualization
 		 MonicelliInterface
 		 SupervisorInfo
 		 ConfigurationInterface
+		 Macros
 		 ConfigurationDataFormats
 		 #otsdaq-core_ConfigurationPluginDataFormats_DataManagerConfiguration_configuration
 		 #otsdaq-core_ConfigurationPluginDataFormats_DataBufferConfiguration_configuration
