Fixing XmlUtitlities library name in CMakeLists

--- a/otsdaq-utilities/ControlsDashboard/CMakeLists.txt
+++ b/otsdaq-utilities/ControlsDashboard/CMakeLists.txt
@@ -8,7 +8,7 @@ cet_make(LIBRARY_NAME ControlsDashboard
 		 ConfigurationInterface
 		 ConfigurationDataFormats		 
 		 PluginMakers
-		 XMLUtilities
+		 XmlUtilities
 		 CgiDataUtilities
 		 FiniteStateMachine
 		 
