cloning histos b ut not totally safe

--- a/otsdaq-utilities/Visualization/CMakeLists.txt
+++ b/otsdaq-utilities/Visualization/CMakeLists.txt
@@ -13,7 +13,7 @@ cet_make(LIBRARY_NAME Visualization
 		 CgiDataUtilities
 		 FiniteStateMachine
 		 WebUsersUtilities
-		 MonicelliInterface
+		 #MonicelliInterface
 		 SupervisorInfo
 		 ConfigurationInterface
 		 Macros
