Checking in new features: MacroMaker can export directly to FE plugin, web apps can open desktop icons by name

--- a/otsdaq-utilities/MacroMaker/CMakeLists.txt
+++ b/otsdaq-utilities/MacroMaker/CMakeLists.txt
@@ -9,6 +9,8 @@ cet_make(LIBRARY_NAME MacroMaker
 		 FiniteStateMachine
 		 XmlUtilities
          $ENV{XERCES_C_LIB}/libxerces-c.so
+         
+         CodeEditor
 )
 
 install_headers()
