--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,11 +30,15 @@ include(CetCMakeEnv)
 cet_cmake_env()
 include(FindUpsXdaq)
 
-cet_set_compiler_flags(DIAGS VIGILANT
+cet_set_compiler_flags(
+ DIAGS 
+ VIGILANT
  WERROR
  NO_UNDEFINED
  EXTRA_FLAGS -pedantic -Wno-unused-parameter -Wno-unused-but-set-variable -Wno-maybe-uninitialized -Wno-ignored-qualifiers -Wno-unused-variable
  )
+
+cet_remove_compiler_flags(-std=c++98)
 
 cet_report_compiler_flags()
 
