multi-threaded state machine command broadcasting from Gateway fully functional.

--- a/otsdaq-utilities/Console/CMakeLists.txt
+++ b/otsdaq-utilities/Console/CMakeLists.txt
@@ -1,4 +1,4 @@
-cet_make_exec(mf_rcv_n_fwd SOURCE MF_ReceiveAndForward.cpp)
+cet_make_exec(otsConsoleFwd SOURCE MF_ReceiveAndForward.cpp)
 
 
 #For Console Supervisor
