Add missing library dependencies and install directives

--- a/otsdaq-utilities/Chat/CMakeLists.txt
+++ b/otsdaq-utilities/Chat/CMakeLists.txt
@@ -10,7 +10,7 @@ cet_make(LIBRARY_NAME Chat
 		 XmlUtilities
 		 WebUsersUtilities
          SOAPUtilities
-#	 MessageFacility
+	 MF_MessageLogger
 )
 
 install_headers()
