--- a/otsdaq-utilities/ECLWriter/CMakeLists.txt
+++ b/otsdaq-utilities/ECLWriter/CMakeLists.txt
@@ -37,6 +37,7 @@ cet_make( LIBRARY_NAME ECLWriterCore EXCLUDE ECLSupervisor.cc
         pthread
     crypto
     ${CURL_LIBRARIES}
+    MF_MessageLogger
 	)
 cet_make( LIBRARY_NAME ECLWriter EXCLUDE ECLConnection.cpp  ECL.cxx
 	LIBRARIES
@@ -53,6 +54,7 @@ cet_make( LIBRARY_NAME ECLWriter EXCLUDE ECLConnection.cpp  ECL.cxx
 		 ConfigurationInterface
 		 ConfigurationDataFormats
 		 otsdaq-core_ConfigurationPluginDataFormats_XDAQContextConfiguration_configuration
+		 MF_MessageLogger
     crypto
     ${CURL_LIBRARIES}
 	)
@@ -62,5 +64,5 @@ endif(CURL_FOUND)
 endif(XSD_FOUND)
 
 
-install_headers()
-install_source()
+install_headers(EXTRAS ECL.hxx)
+install_source(EXTRAS ECL.hxx)
