--- a/otsdaq-utilities/ControlsDashboard/CMakeLists.txt
+++ b/otsdaq-utilities/ControlsDashboard/CMakeLists.txt
@@ -6,7 +6,7 @@ cet_make(LIBRARY_NAME ControlsDashboard
 		 artdaq-core_Utilities
 		 ${XDAQ_BASIC_LIB_LIST}
 		 ConfigurationInterface
-		 ConfigurationDataFormats		 
+		 TableCore		 
 		 PluginMakers
 		 XmlUtilities
 		 CgiDataUtilities
