--- a/otsdaq-utilities/MacroMaker/CMakeLists.txt
+++ b/otsdaq-utilities/MacroMaker/CMakeLists.txt
@@ -4,7 +4,7 @@ cet_make(LIBRARY_NAME MacroMaker
 		 artdaq-core_Utilities
 		 ${XDAQ_BASIC_LIB_LIST}
 		 ConfigurationInterface
-		 ConfigurationDataFormats
+		 TableCore
 		 CoreSupervisors
 		 CgiDataUtilities
 		 SOAPUtilities
