--- a/otsdaq-utilities/Visualization/CMakeLists.txt
+++ b/otsdaq-utilities/Visualization/CMakeLists.txt
@@ -17,7 +17,7 @@ cet_make(LIBRARY_NAME Visualization
 		 SupervisorInfo
 		 ConfigurationInterface
 		 Macros
-		 ConfigurationDataFormats
+		 TableCore
 		 #otsdaq-core_ConfigurationPluginDataFormats_DataManagerConfiguration_configuration
 		 #otsdaq-core_ConfigurationPluginDataFormats_DataBufferConfiguration_configuration
 		 otsdaq-core_ConfigurationPluginDataFormats_XDAQContextConfiguration_configuration
