fixing Dan breaking compile

--- a/otsdaq-utilities/CMakeLists.txt
+++ b/otsdaq-utilities/CMakeLists.txt
@@ -12,4 +12,4 @@ add_subdirectory(Logbook)
 add_subdirectory(Visualization)
 add_subdirectory(MacroMaker)
 add_subdirectory(Console)
-add_subdirectory(ControlsDashboard)
+#add_subdirectory(ControlsDashboard)
