Some fixes to build independently

--- a/otsdaq-utilities/MacroMaker/CMakeLists.txt
+++ b/otsdaq-utilities/MacroMaker/CMakeLists.txt
@@ -2,6 +2,7 @@ include_directories($ENV{XERCES_C_INC})
 cet_make(LIBRARY_NAME MacroMaker
 		 LIBRARIES
 		 artdaq-core_Utilities
+		 artdaq_DAQdata
 		 ${XDAQ_BASIC_LIB_LIST}
 		 ConfigurationInterface
 		 TableCore
@@ -12,6 +13,9 @@ cet_make(LIBRARY_NAME MacroMaker
 		 XmlUtilities
          MF_MessageLogger
          CodeEditor
+		 FECore
+         Macros
+         ${Boost_SYSTEM_LIBRARY}
 )
 
 install_headers()
