Added save, load, and read pages from server features

--- a/otsdaq-utilities/CMakeLists.txt
+++ b/otsdaq-utilities/CMakeLists.txt
@@ -3,7 +3,7 @@
 add_subdirectory(Chat)
 add_subdirectory(ConfigurationGUI)
 add_subdirectory(Console)
-#add_subdirectory(ControlsDashboard)
+add_subdirectory(ControlsDashboard)
 add_subdirectory(ECLWriter)
 add_subdirectory(Logbook)
 add_subdirectory(Visualization)
