Remove Clang builds. Add Macros to library link list

--- a/otsdaq-utilities/Console/CMakeLists.txt
+++ b/otsdaq-utilities/Console/CMakeLists.txt
@@ -18,6 +18,7 @@ cet_make(LIBRARY_NAME Console
 		 WebUsersUtilities
 #		 MessageFacility
 		 NetworkUtilities
+         Macros
 )
 
 install_headers()
