--- a/otsdaq-utilities/Logbook/CMakeLists.txt
+++ b/otsdaq-utilities/Logbook/CMakeLists.txt
@@ -4,6 +4,7 @@ cet_make(LIBRARY_NAME Logbook
 		 LIBRARIES
 		 artdaq-core_Utilities
 		 ${XDAQ_BASIC_LIB_LIST}
+         Macros
 		 CoreSupervisors
 		 CgiDataUtilities
 		 XmlUtilities
