Add missing libraries to MacroMaker link list

--- a/otsdaq-utilities/MacroMaker/CMakeLists.txt
+++ b/otsdaq-utilities/MacroMaker/CMakeLists.txt
@@ -13,6 +13,8 @@ cet_make(LIBRARY_NAME MacroMaker
 		 XmlUtilities
          MF_MessageLogger
          CodeEditor
+		 WebUsersUtilities
+		 SupervisorInfo
 		 FECore
          Macros
          ${Boost_SYSTEM_LIBRARY}
