--- a/otsdaq-utilities/ConfigurationGUI/CMakeLists.txt
+++ b/otsdaq-utilities/ConfigurationGUI/CMakeLists.txt
@@ -11,6 +11,7 @@ cet_make(LIBRARY_NAME ConfigurationGUI
 		 CoreSupervisors
 		 SupervisorInfo
 		 GatewaySupervisor
+		 ARTDAQSupervisor
 		 CgiDataUtilities
 		 WebUsersUtilities
 		 XmlUtilities
