--- a/otsdaq-utilities/Console/CMakeLists.txt
+++ b/otsdaq-utilities/Console/CMakeLists.txt
@@ -19,6 +19,7 @@ cet_make(LIBRARY_NAME Console
 #		 MessageFacility
 		 NetworkUtilities
          Macros
+		 ${Boost_REGEX_LIBRARY}
 )
 
 install_headers()
