--- a/otsdaq-utilities/SlowControlsDashboard/CMakeLists.txt
+++ b/otsdaq-utilities/SlowControlsDashboard/CMakeLists.txt
@@ -1,7 +1,7 @@
 
 include_directories($ENV{XERCES_C_INC})
 
-cet_make(LIBRARY_NAME ControlsDashboard
+cet_make(LIBRARY_NAME SlowControlsDashboard
 		 LIBRARIES
 		 artdaq-core_Utilities
 		 ${XDAQ_BASIC_LIB_LIST}
