--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -1,4 +1,5 @@
 include(artdaq_doxygen)
 
+create_doxygen_documentation()
 #create_doxygen_documentation(EXCLUDE WebGUI/)
-create_doxygen_documentation(INCLUDE WebGUI/html/*.html)
+#create_doxygen_documentation(INCLUDE WebGUI/html/*.html)
