Adding new qualifiers, and script to auto fix quals, and fix remote git remote origins

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -3,4 +3,6 @@ cet_script(
 	UpdateOTS.sh
 	AddNewInterface.py
 	create_ots_repo.sh
+	ots_get_and_fix_repo.sh
+	ots_add_qualifiers_to_repo_product_deps.sh
 )
