--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -52,6 +52,7 @@ find_ups_product( artdaq_utilities v1_00_00 )
 find_ups_product( art v1_06_00 )
 #find_ups_product( python v2_7_14)
 #include_directories($ENV{PYTHON_INCLUDE})
+find_ups_product( TRACE v3_03_00 )
 find_ups_product( fhiclcpp v2_16_00 )
 find_ups_product( messagefacility v1_10_00 )
 find_ups_product( cetlib v1_03_00 )
