--- a/otsdaq-utilities/CMakeLists.txt
+++ b/otsdaq-utilities/CMakeLists.txt
@@ -7,4 +7,5 @@ add_subdirectory(SlowControlsDashboard)
 add_subdirectory(ECLWriter)
 add_subdirectory(Logbook)
 add_subdirectory(Visualization)
+add_subdirectory(VisualizationV2)
 add_subdirectory(MacroMaker)
