Updates for s108 and cetbuildtools v8

--- a/otsdaq-utilities/ConfigurationGUI/CMakeLists.txt
+++ b/otsdaq-utilities/ConfigurationGUI/CMakeLists.txt
@@ -1,25 +1,25 @@
 include_directories($ENV{XERCES_C_INC})
 cet_make(LIBRARY_NAME ConfigurationGUI
 		 LIBRARIES
-		 artdaq-core_Utilities
+		 artdaq_core::artdaq-core_Utilities
 		 ${XDAQ_BASIC_LIB_LIST}
 		 ${CETLIB_EXCEPT}
-		 ConfigurationInterface
-		 TableCore
+		 otsdaq::ConfigurationInterface
+		 otsdaq::TableCore
 		 otsdaq_TablePlugins_IterateTable_table
 		 otsdaq_TablePlugins_XDAQContextTable_table
-		 ARTDAQTableBase
-		 FiniteStateMachine
-		 CoreSupervisors
-		 SupervisorInfo
-		 GatewaySupervisor
-		 ARTDAQSupervisor
-		 CgiDataUtilities
-		 WebUsersUtilities
-		 XmlUtilities
-		 Macros
-		 cetlib
-	 	 ${MF_MESSAGELOGGER}
+		 otsdaq::ARTDAQTableBase
+		 otsdaq::FiniteStateMachine
+		 otsdaq::CoreSupervisors
+		 otsdaq::SupervisorInfo
+		 otsdaq::GatewaySupervisor
+		 otsdaq::ARTDAQSupervisor
+		 otsdaq::CgiDataUtilities
+		 otsdaq::WebUsersUtilities
+		 otsdaq::XmlUtilities
+		 otsdaq::Macros
+		cetlib
+	 	 MF_MessageLogger
 )
 
 install_headers()
