--- a/otsdaq-utilities/Console/CMakeLists.txt
+++ b/otsdaq-utilities/Console/CMakeLists.txt
@@ -2,23 +2,22 @@ cet_make_exec(otsConsoleFwd SOURCE MF_ReceiveAndForward.cpp)
 
 
 #For Console Supervisor
-include_directories($ENV{XERCES_C_INC})
 cet_make(LIBRARY_NAME Console
 		 LIBRARIES
-		 artdaq-core_Utilities
+		 artdaq_core::artdaq-core_Utilities
 		 ${XDAQ_BASIC_LIB_LIST}
-		 SupervisorInfo
+		 otsdaq::SupervisorInfo
 		${MF_MESSAGELOGGER}
 		${MF_UTILITIES}
-		FiniteStateMachine
-		CoreSupervisors
-		 XmlUtilities
-		 SOAPUtilities
-		 CgiDataUtilities
-		 WebUsersUtilities
+		otsdaq::FiniteStateMachine
+		otsdaq::CoreSupervisors
+		 otsdaq::XmlUtilities
+		 otsdaq::SOAPUtilities
+		 otsdaq::CgiDataUtilities
+		 otsdaq::WebUsersUtilities
 #		 MessageFacility
-		 NetworkUtilities
-         Macros
+		 otsdaq::NetworkUtilities
+         otsdaq::Macros
 		 ${Boost_REGEX_LIBRARY}
 )
 
