Update CMake to ensure build paths are not propagated to output

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,7 +51,6 @@ find_ups_product( artdaq_core v1_00_00 )
 find_ups_product( artdaq_utilities v1_00_00 )
 find_ups_product( art v1_06_00 )
 #find_ups_product( python v2_7_14)
-#include_directories($ENV{PYTHON_INCLUDE})
 find_ups_product( TRACE v3_03_00 )
 find_ups_product( fhiclcpp v2_16_00 )
 find_ups_product( messagefacility v1_10_00 )
@@ -64,21 +63,20 @@ find_ups_boost( v1_50_0 filesystem
  )
  
  # XDAQ Extra setup
-link_directories($ENV{ARTDAQ_DATABASE_LIB})
  include_directories($ENV{XDAQ_INC}/linux)
+link_directories($ENV{XDAQ_LIB})
+link_directories($ENV{ARTDAQ_DATABASE_LIB})
  set(XDAQ_BASIC_LIB_LIST 
-   $ENV{XDAQ_LIB}/libxcept.so
-   $ENV{XDAQ_LIB}/libxoap.so
-   $ENV{XDAQ_LIB}/libxdaq.so
-   $ENV{XDAQ_LIB}/libtoolbox.so
-   $ENV{XDAQ_LIB}/libxerces-c.so
+   xcept
+   xoap
+   xdaq
+   toolbox
+   xerces-c
    cgicc
  )
- set(XDAQ_XERCES-C $ENV{XDAQ_LIB}/libxerces-c.so)
+ set(XDAQ_XERCES-C xerces-c)
 
-
-##find_package(MPI QUIET)
-
+ 
 string(REGEX MATCHALL "[0-9][0-9]?[0-9]?" MESSAGEFACILITY_VERSION_LIST "$ENV{MESSAGEFACILITY_VERSION}")
 list(GET MESSAGEFACILITY_VERSION_LIST 0 MESSAGEFACILITY_MAJOR_VERSION)
 list(GET MESSAGEFACILITY_VERSION_LIST 1 MESSAGEFACILITY_MINOR_VERSION)
