--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,18 +10,14 @@
 # use cmake 3.17 or later
 cmake_minimum_required (VERSION 3.17)
 
-find_package(cetbuildtools)
+find_package(cetmodules)
+set(CET_CETBUILDTOOLS_COMPAT TRUE)
+include(Compatibility)
+set(CET_WARN_DEPRECATED)
 
-project(otsdaq_utilities VERSION 2.06.02)
-# cetbuildtools contains our cmake modules
-SET ( CETBUILDTOOLS_VERSION $ENV{CETBUILDTOOLS_VERSION} )
-IF (NOT CETBUILDTOOLS_VERSION)
-    MESSAGE (FATAL_ERROR "ERROR: setup cetbuildtools to get the cmake modules")
-ENDIF()
+project(otsdaq_utilities VERSION 2.06.03)
 
 set(CMAKE_MODULE_PATH
-        $ENV{ART_DIR}/Modules
-        $ENV{CETBUILDTOOLS_DIR}/Modules
         $ENV{XDAQ_DIR}/Modules
         $ENV{ARTDAQ_UTILITIES_DIR}/Modules
         ${CMAKE_MODULE_PATH})
@@ -44,7 +40,6 @@ cet_report_compiler_flags()
 
 # these are minimum required versions, not the actual product versions
 #find_ups_product( epics v3_15_4)
-find_ups_product( cetbuildtools v3_03_00 )
 find_ups_product( otsdaq v1_00_00 )
 find_ups_product( artdaq v0_04_02 )
 find_ups_product( artdaq_core v1_00_00 )
@@ -111,9 +106,6 @@ if( $ENV{OTS_DOXY} MATCHES "DOIT" )
 	add_subdirectory(onlineDoc)
 endif()
 
-# UPS Version files
-add_subdirectory(ups)
-
 # WebGUI
 FILE(COPY WebGUI DESTINATION .)
 INSTALL(DIRECTORY WebGUI DESTINATION ${product}/${version})
@@ -122,5 +114,4 @@ INSTALL(DIRECTORY WebGUI DESTINATION ${product}/${version})
 FILE(COPY tools DESTINATION .)
 INSTALL(DIRECTORY tools DESTINATION ${product}/${version})
 
-# packaging utility
-include(UseCPack)
+cet_cmake_config()
