Use CMAKE_PROJECT_VERSION

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -80,7 +80,7 @@ message("-DMESSAGEFACILITY_HEX_VERSION=0x${MESSAGEFACILITY_MAJOR_VERSION}${MESSA
 add_definitions(-DMESSAGEFACILITY_HEX_VERSION=0x${MESSAGEFACILITY_MAJOR_VERSION}${MESSAGEFACILITY_MINOR_VERSION}${MESSAGEFACILITY_PATCH_VERSION})
 
 # For version.h
-string(REGEX MATCHALL "[0-9][0-9]?" OTSDAQ_VERSION_LIST "${version}")
+string(REGEX MATCHALL "[0-9][0-9]?" OTSDAQ_VERSION_LIST "${CMAKE_PROJECT_VERSION}")
 list(GET OTSDAQ_VERSION_LIST 0 OTSDAQ_MAJOR_VERSION)
 list(GET OTSDAQ_VERSION_LIST 1 OTSDAQ_MINOR_VERSION)
 list(GET OTSDAQ_VERSION_LIST 2 OTSDAQ_PATCH_VERSION)
