--- a/otsdaq-utilities/VisualizationV2/CMakeLists.txt
+++ b/otsdaq-utilities/VisualizationV2/CMakeLists.txt
@@ -19,8 +19,8 @@ cet_make(LIBRARY_NAME VisualizationV2
 		 otsdaq::TableCore
 		 #otsdaq_TablePlugins_DataManagerConfiguration_table
 		 #otsdaq_TablePlugins_DataBufferConfiguration_table
-		 otsdaq_TablePlugins_XDAQContextTable_table
-		 otsdaq_DataProcessorPlugins_RawDataVisualizerConsumer_processor
+		 otsdaq::TablePlugins_XDAQContextTable_table
+		 otsdaq::DataProcessorPlugins_RawDataVisualizerConsumer_processor
 		 otsdaq::XmlUtilities
 		 otsdaq::SOAPUtilities
 		 MF_MessageLogger
