--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -108,10 +108,10 @@ endif()
 
 # WebGUI
 FILE(COPY WebGUI DESTINATION .)
-INSTALL(DIRECTORY WebGUI DESTINATION ${product}/${version})
+INSTALL(DIRECTORY WebGUI DESTINATION . FILE_PERMISSIONS USE_SOURCE_PERMISSIONS)
 
 # tools
 FILE(COPY tools DESTINATION .)
-INSTALL(DIRECTORY tools DESTINATION ${product}/${version})
+INSTALL(DIRECTORY tools DESTINATION . FILE_PERMISSIONS USE_SOURCE_PERMISSIONS)
 
 cet_cmake_config()
