--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -113,9 +113,9 @@ if( $ENV{OTS_DOXY} MATCHES "DOIT" )
 endif()
 
 # WebGUI
-configure_file(${CMAKE_SOURCE_DIR}/WebGUI/js/Debug.js.in ${CMAKE_BINARY_DIR}/WebGUI/js/Debug.js @ONLY)
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/WebGUI/js/Debug.js.in ${CMAKE_CURRENT_BINARY_DIR}/WebGUI/js/Debug.js @ONLY)
 FILE(COPY WebGUI DESTINATION . PATTERN "*.in" EXCLUDE)
-INSTALL(FILES ${CMAKE_BINARY_DIR}/WebGUI/js/Debug.js DESTINATION WebGUI/js)
+INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/WebGUI/js/Debug.js DESTINATION WebGUI/js)
 INSTALL(DIRECTORY WebGUI DESTINATION . FILE_PERMISSIONS USE_SOURCE_PERMISSIONS PATTERN "*.in" EXCLUDE)
 
 # tools
