Propagated Debug.js.in handling to also create a modified copy in the source directory, Debug.js in source directory should not be checked in.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -117,6 +117,7 @@ configure_file(${CMAKE_CURRENT_SOURCE_DIR}/WebGUI/js/Debug.js.in ${CMAKE_CURRENT
 FILE(COPY WebGUI DESTINATION . PATTERN "*.in" EXCLUDE)
 INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/WebGUI/js/Debug.js DESTINATION WebGUI/js)
 INSTALL(DIRECTORY WebGUI DESTINATION . FILE_PERMISSIONS USE_SOURCE_PERMISSIONS PATTERN "*.in" EXCLUDE)
+configure_file(${CMAKE_CURRENT_BINARY_DIR}/WebGUI/js/Debug.js ${CMAKE_CURRENT_SOURCE_DIR}/WebGUI/js/Debug.js @ONLY)
 
 # tools
 FILE(COPY tools DESTINATION .)
